--- a/src/app/pages/registro/registro.component.html
+++ b/src/app/pages/registro/registro.component.html
@@ -1,4 +1,4 @@
-<div class="container py-5">
+<div class="container w-50 py-5">
   <h2>Registro de nuevo usuario</h2>
   <form (ngSubmit)="onRegister()" #registerForm="ngForm">
     <div class="mb-3">
