--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container py-5">
+<div class="container w-50 py-5">
   <h2>Iniciar sesión</h2>
   <form (ngSubmit)="onLogin()" #loginForm="ngForm">
     <div class="mb-3">
