--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -88,7 +88,7 @@
               <div class="action-buttons-cell">
                 <button 
                   (click)="editUser(usuario)" 
-                  class="btn btn-outline-primary btn-sm"
+                  class="btn btn-outline-warning btn-sm"
                   title="Editar usuario"
                 >
                   <i class="bi bi-pencil"></i>
