--- a/src/app/components/modal-compra/modal-compra.component.html
+++ b/src/app/components/modal-compra/modal-compra.component.html
@@ -123,7 +123,7 @@
                             <div class="col-md-6 mb-3">
                                 <label for="telefono" class="form-label">Teléfono *</label>
                                 <input type="tel" id="telefono" class="form-control" [(ngModel)]="datosCliente.telefono"
-                                    name="telefono" required>
+                                    name="telefono" required placeholder="Ej: +56 9 1234 5678">
                             </div>
                             <div class="col-md-6 mb-3">
                                 <label for="region" class="form-label">Región *</label>
@@ -138,16 +138,64 @@
                             </div>
                         </div>
 
-                        <div class="mb-3">
-                            <label for="direccion" class="form-label">Dirección *</label>
-                            <input type="text" id="direccion" class="form-control" [(ngModel)]="datosCliente.direccion"
-                                name="direccion" required>
+                        <!-- Ciudad y Comuna -->
+                        <div class="row">
+                            <div class="col-md-6 mb-3">
+                                <label for="ciudad" class="form-label">Ciudad *</label>
+                                <select id="ciudad" class="form-select" [(ngModel)]="datosCliente.ciudad" name="ciudad"
+                                    required>
+                                    <option value="">Seleccionar ciudad</option>
+                                    <option value="santiago">Santiago</option>
+                                    <option value="valparaiso">Valparaíso</option>
+                                    <option value="viña-del-mar">Viña del Mar</option>
+                                    <option value="concepcion">Concepción</option>
+                                    <option value="talcahuano">Talcahuano</option>
+                                    <option value="antofagasta">Antofagasta</option>
+                                    <option value="temuco">Temuco</option>
+                                    <option value="rancagua">Rancagua</option>
+                                    <option value="arica">Arica</option>
+                                    <option value="iquique">Iquique</option>
+                                    <option value="chillan">Chillán</option>
+                                    <option value="valdivia">Valdivia</option>
+                                    <option value="osorno">Osorno</option>
+                                    <option value="puerto-montt">Puerto Montt</option>
+                                </select>
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <label for="comuna" class="form-label">Comuna *</label>
+                                <select id="comuna" class="form-select" [(ngModel)]="datosCliente.comuna" name="comuna"
+                                    required>
+                                    <option value="">Seleccionar comuna</option>
+                                    <option value="las-condes">Las Condes</option>
+                                    <option value="vitacura">Vitacura</option>
+                                    <option value="providencia">Providencia</option>
+                                    <option value="santiago">Santiago Centro</option>
+                                    <option value="ñuñoa">Ñuñoa</option>
+                                    <option value="la-reina">La Reina</option>
+                                    <option value="maipu">Maipú</option>
+                                    <option value="pudahuel">Pudahuel</option>
+                                    <option value="cerrillos">Cerrillos</option>
+                                    <option value="san-miguel">San Miguel</option>
+                                    <option value="la-florida">La Florida</option>
+                                    <option value="puente-alto">Puente Alto</option>
+                                    <option value="san-bernardo">San Bernardo</option>
+                                    <option value="melipilla">Melipilla</option>
+                                </select>
+                            </div>
                         </div>
 
-                        <div class="mb-3">
-                            <label for="ciudad" class="form-label">Ciudad *</label>
-                            <input type="text" id="ciudad" class="form-control" [(ngModel)]="datosCliente.ciudad"
-                                name="ciudad" required>
+                        <!-- Calle y Número -->
+                        <div class="row">
+                            <div class="col-md-8 mb-3">
+                                <label for="calle" class="form-label">Calle *</label>
+                                <input type="text" id="calle" class="form-control" [(ngModel)]="datosCliente.calle"
+                                    name="calle" required placeholder="Ej: Av. Libertador Bernardo O'Higgins">
+                            </div>
+                            <div class="col-md-4 mb-3">
+                                <label for="numero" class="form-label">Número *</label>
+                                <input type="text" id="numero" class="form-control" [(ngModel)]="datosCliente.numero"
+                                    name="numero" required placeholder="Ej: 1234">
+                            </div>
                         </div>
 
                         <div class="mb-3">
@@ -211,7 +259,8 @@
                     <div class="mt-3">
                         <h6>Datos de entrega:</h6>
                         <p><strong>{{ datosCliente.nombre }}</strong><br>
-                            {{ datosCliente.direccion }}, {{ datosCliente.ciudad }}<br>
+                            {{ datosCliente.calle }} {{ datosCliente.numero }}, {{ datosCliente.comuna }}<br>
+                            {{ datosCliente.ciudad }}, {{ datosCliente.region }}<br>
                             {{ datosCliente.telefono }}</p>
                     </div>
                 </div>
